force-app/main/default/objects/Integration_Call_Log__c/Integration_Call_Log__c.object-meta.xml
<CustomObject>
    <description>Stores detailed logs of integration callouts and API requests made by the system. Each record captures the endpoint, request/response data, timestamp, status, and related transaction context to support monitoring, debugging, and reporting.</description>
    <label>Integration Call Log</label>
    <nameField>
        <displayFormat>ICL-{0000000}</displayFormat>
        <label>Log Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration Call Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>