force-app/main/default/objects/Integration_Call_Log__c/fields/Action_Type_c__c.field-meta.xml
<CustomField>
    <fullName>Action_Type_c__c</fullName>
    <description>The functional action performed (e.g., Calculate, Sync, Fetch).</description>
    <inlineHelpText>The functional action performed.</inlineHelpText>
    <label>Action_Type__c</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Calculate</fullName>
            </value>
            <value>
                <fullName>Fetch</fullName>
            </value>
            <value>
                <fullName>Sync</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>