force-app/main/default/objects/Integration_Call_Log__c/fields/Duration_ms__c.field-meta.xml
<CustomField>
    <fullName>Duration_ms__c</fullName>
    <description>Calculates the total execution time in milliseconds.</description>
    <formula>(Response_Timestamp__c - Request_Timestamp__c) * 86400000</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Calculates the total execution time in milliseconds.</inlineHelpText>
    <label>Duration (ms)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>