force-app/main/default/objects/Integration_Call_Log__c/fields/Endpoint__c.field-meta.xml
<CustomField>
    <fullName>Endpoint__c</fullName>
    <description>The full URL or Named Credential endpoint called.</description>
    <inlineHelpText>The full URL or Named Credential endpoint called.</inlineHelpText>
    <label>Endpoint</label>
    <length>255</length>
    <type>Text</type>
</CustomField>