force-app/main/default/objects/Integration_Call_Log__c/fields/Error_Code__c.field-meta.xml
<CustomField>
    <fullName>Error_Code__c</fullName>
    <description>Specific business error code returned by the API.</description>
    <inlineHelpText>Specific business error code returned by the API.</inlineHelpText>
    <label>Error Code</label>
    <length>100</length>
    <type>Text</type>
</CustomField>