force-app/main/default/objects/Integration_Call_Log__c/fields/Is_Success__c.field-meta.xml
<CustomField>
    <fullName>Is_Success__c</fullName>
    <description>Returns true if the status is successfully set to Success.</description>
    <formula>ISPICKVAL(Status__c, &quot;Success&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Returns true if the status is successfully set to Success.</inlineHelpText>
    <label>Is Success</label>
    <type>Checkbox</type>
</CustomField>