force-app/main/default/objects/Integration_Call_Log__c/fields/Related_Object__c.field-meta.xml
<CustomField>
    <fullName>Related_Object__c</fullName>
    <description>The API name of the Salesforce object involved (e.g., Opportunity).</description>
    <inlineHelpText>The API name of the Salesforce object involved.</inlineHelpText>
    <label>Related Object</label>
    <length>80</length>
    <type>Text</type>
</CustomField>