force-app/main/default/objects/Integration_Call_Log__c/fields/Related_Record_Id__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_Id__c</fullName>
    <description>The 18-character Salesforce ID of the record related to this log.</description>
    <inlineHelpText>The 18-character Salesforce ID of the record related to this log.</inlineHelpText>
    <label>Related Record Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>