force-app/main/default/objects/Integration_Call_Log__c/fields/Request_Payload__c.field-meta.xml
<CustomField>
    <fullName>Request_Payload__c</fullName>
    <description>The raw body/content sent in the request.</description>
    <inlineHelpText>The raw body/content sent in the request.</inlineHelpText>
    <label>Request Payload</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>