force-app/main/default/objects/Integration_Call_Log__c/fields/Request_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Request_Timestamp__c</fullName>
    <description>Precise date and time when the call was initiated.</description>
    <inlineHelpText>Precise date and time when the call was initiated.</inlineHelpText>
    <label>Request Timestamp</label>
    <type>DateTime</type>
</CustomField>