force-app/main/default/objects/Integration_Call_Log__c/fields/Response_Body__c.field-meta.xml
<CustomField>
    <fullName>Response_Body__c</fullName>
    <description>The raw response content received from the external system.</description>
    <inlineHelpText>The raw response content received from the external system.</inlineHelpText>
    <label>Response Body</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>