force-app/main/default/objects/Integration_Call_Log__c/fields/Response_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>Response_Timestamp__c</fullName>
    <description>Precise date and time when the response was received.</description>
    <inlineHelpText>Precise date and time when the response was received.</inlineHelpText>
    <label>Response Timestamp</label>
    <type>DateTime</type>
</CustomField>