force-app/main/default/objects/Integration_Call_Log__c/fields/Retry_Count__c.field-meta.xml
<CustomField>
    <fullName>Retry_Count__c</fullName>
    <description>Number of times this specific call has been retried.</description>
    <inlineHelpText>Number of times this specific call has been retried.</inlineHelpText>
    <label>Retry Count</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>