force-app/main/default/objects/Integration_Call_Log__c/fields/Service_Name__c.field-meta.xml
<CustomField>
    <fullName>Service_Name__c</fullName>
    <description>The name of the integrated system (e.g., BinPacking, ERP).</description>
    <inlineHelpText>The name of the integrated system .</inlineHelpText>
    <label>Service Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BinSolver</fullName>
            </value>
            <value>
                <fullName>BinPacking</fullName>
            </value>
            <value>
                <fullName>ERP</fullName>
            </value>
            <value>
                <fullName>OpenRouteService</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>