force-app/main/default/objects/Integration_Call_Log__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The overall status of the transaction (Success, Failed, etc.).</description>
    <inlineHelpText>The overall status of the transaction (Success, Failed, etc.).</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
            <value>
                <fullName>Timeout</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>