force-app/main/default/objects/Integration_Call_Log__c/fields/Status_Code__c.field-meta.xml
<CustomField>
    <fullName>Status_Code__c</fullName>
    <description>The numeric response code (e.g., 200, 400, 500).</description>
    <inlineHelpText>The numeric response code (e.g., 200, 400, 500).</inlineHelpText>
    <label>Status Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>